@@ -1,6 +1,8 @@
 0.6.4.16
 New-DesktopShortcut didn't work if the username has special characters
 Add support for Windows Insider builds
+New-BcContainer would always try to pull the generic image if the image specified didn't exist
+New-BcContainer will report whether or not it is running as administrator
 
 0.6.4.15
 Creating a container with -enableTaskScheduler:$false will disable Task Scheduler (if the container has Task Scheduler running per default = Sandbox containers)
